AC-65: Added basic mapping for vitals form.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -153,7 +153,7 @@
                 android:value=".activities.FindActiveVisitsActivity" />
         </activity>
         <activity
-            android:name="org.odk.collect.android.activities.FormEntryActivity"
+            android:name=".activities.FormEntryActivity"
             android:label="@string/action_active_visits"
             android:launchMode="singleTop">
         </activity>
